# Option_advisor

./: .gitignore  CLAUDE.md  CONTEXT.md  Option_advisor.code-workspace  README.md  logger_config.json  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  docs.yml  integration_test.yml  qualification_test.yml  ruff.yml  security.yml  typecheck.yml  unit_test.yml
drafts/: check_all.ps1  check_coverage.ps1  check_docs.ps1  check_format.ps1  check_lint.ps1  check_live.ps1  check_mutmut.ps1  check_mutmut.sh  check_quick.ps1  check_security.ps1  check_tests.ps1  check_types.ps1  ibkr_utils.py  tempCodeRunnerFile.py  test_connection.py  ui_demo.py
ibkr_options/: main.py
ibkr_options/connection/: ibkr_client.py  reconnect.py
ibkr_options/data/: data_manager.py  options_chain.py
ibkr_options/indicators/: theta_decay.py
ibkr_options/logger/: config.py  csv_writer.py
ibkr_options/ui/: display.py
tests/: conftest.py
tests/integration/: test_test_connection.py
tests/qualification/: test_live_flow.py  test_main_flow.py
tests/unit/: test_ibkr_utils.py  test_test_connection.py
