[build-system]
requires      = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name            = "option-advisor"
version         = "0.1.0"
description     = "IBKR options data collector and analyzer"
readme          = "README.md"
requires-python = "==3.11.*"
authors         = [{ email = "mlody240@gmail.com" }]

dependencies = [
    "ibapi==10.37.2",
    "numpy==2.4.4",
    "PyQt6==6.11.0",
    "pyqtgraph==0.14.0",
]

[project.optional-dependencies]
dev = [
    "pydoclint>=0.8.4",
    "ruff>=0.15.13",
]

# ── ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors  — style violations
    "W",    # pycodestyle warnings
    "F",    # pyflakes             — undefined names, unused imports
    "I",    # isort               — import ordering
    "B",    # bugbear             — common bugs and design issues
    "UP",   # pyupgrade           — modernise Python syntax
    "SIM",  # simplify            — simplifiable code patterns
    "RUF",  # ruff-specific rules
]
