[build-system]
requires      = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name            = "option-advisor"
version         = "0.1.0"
description     = "IBKR options data collector and analyzer"
readme          = "README.md"
requires-python = "==3.11.*"
authors         = [{ email = "mlody240@gmail.com" }]

dependencies = [
    "ibapi==10.37.2",
    "numpy==2.4.4",
    "PyQt6==6.11.0",
    "pyqtgraph==0.14.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.9.4",
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "pydoclint>=0.8.4",
    "ruff>=0.15.13",
]

# ── setuptools ───────────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
exclude = ["drafts*"]  # drafts/ contains exploratory scripts, not distributable packages

# ── mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version        = "3.11"
strict                = true
disallow_subclassing_any = false  # ibapi ships no stubs — EWrapper/EClient are typed as Any

[[tool.mypy.overrides]]
# ibapi ships no type stubs — ignore all missing-import errors for it
module                = "ibapi.*"
ignore_missing_imports = true

# ── ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors  — style violations
    "W",    # pycodestyle warnings
    "F",    # pyflakes             — undefined names, unused imports
    "I",    # isort               — import ordering
    "B",    # bugbear             — common bugs and design issues
    "UP",   # pyupgrade           — modernise Python syntax
    "SIM",  # simplify            — simplifiable code patterns
    "RUF",  # ruff-specific rules
]
